--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,19 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+
+  download:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    
+    - name: Download the file
+      uses: actions/download-artifact@v4
+      with: 
+        name: hello-artifact
+    
+    - name: Contents of file
+      run: cat ./artifacts/hello.txt
