--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -32,5 +32,5 @@ jobs:
       with: 
         name: hello-artifact
     
-    - name: Contents of file
+    - name: Displays the Contents of file
       run: cat ./artifacts/hello.txt
