--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Download the file
       uses: actions/download-artifact@v4
       with: 
-        name: hello-artifact
+         hello-artifact
     
     - name: Displays the Contents of file
       run: cat ./artifacts/hello.txt
