--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,37 +1,18 @@
-name: Workflow Demo
+name: CI
 
-on: [push]
+on:
+  push:  
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Create a text file
-      run: echo "Hello, world!" > hello.txt
-
-    - name: Archive text file
-      uses: actions/upload-artifact@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
       with:
-        name: hello-artifact
-        path: hello.txt
+        python-version: 3.8
 
-  download:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Download the file
-      uses: actions/download-artifact@v4
-      with: 
-        name: hello-artifact
-        path: ./artifacts
-    
-    - name: Contents of file
-      run: cat ./artifacts/hello.txt
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
